spartan: overlay: fix udfps enrollment * ref - https://github.com/ryukftw/android_device_realme_spartan/commit/30635807b5edd4943a38afcc6e24234e5c35bdc4

--- a/overlay/OPlusSystemUIResTarget/res/values/config.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/config.xml
@@ -14,4 +14,7 @@
     <!-- Whether show refresh rate QS tile -->
     <bool name="config_showRefreshRateQsTile">true</bool>
 
+    <!-- Color of the UDFPS Pressed view -->
+    <color name="config_udfpsColor">#00ffffff</color>
+
 </resources>
